kube-manifests/seedbox/3_deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seedbox-deployment
  namespace: servarr-seedbox
  labels:
    app.kubernetes.io/name: servarr-seedbox
    app.kubernetes.io/instance: servarr-seedbox
spec:
  selector:
    matchLabels:
      app: seedbox-app
  replicas: 1
  serviceName: seedbox
  template:
    metadata:
      labels:
        app: seedbox-app
    spec:
      volumes:
        - name: data
          nfs:
            server: nas1.mgmt.djls.space
            path: /mnt/pool/Multimedia/Seed
        - name: servarr-data
          nfs:
            server: nas1.mgmt.djls.space
            path: /mnt/pool/Multimedia/Libraries/Servarr
        - name: state
          persistentVolumeClaim:
            claimName: transmission-state
      containers:
        - name: transmission
          image: haugene/transmission-openvpn:latest
          ports:
            - containerPort: 9091
              name: http
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: data
              mountPath: /data
            - name: servarr-data
              subPath: torrents/
              mountPath: /servarr/torrents
            - name: state
              subPath: resume/
              mountPath: /config/transmission-home/resume
            - name: state
              subPath: torrents/
              mountPath: /config/transmission-home/torrents
