kube-manifests/seedbox/2_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: seedbox
  namespace: servarr-seedbox
  labels:
    app.kubernetes.io/name: servarr-seedbox
    app.kubernetes.io/instance: servarr-seedbox
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: seedbox-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seedbox-ingress
  namespace: servarr-seedbox
  labels:
    app.kubernetes.io/name: servarr-seedbox
    app.kubernetes.io/instance: servarr-seedbox
spec:
  ingressClassName: nginx
  rules:
    - host: seedbox.coloc.djls.space
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: seedbox
                port:
                  number: 80
